# skhy_derivatives

./: .env.example  .gitignore  README.md  background.md  docker-compose.yml  draft_prd.md  implementation_plan.md  prd.md  pyproject.toml
configs/: base.yaml
configs/environments/: ci.yaml  local.yaml  smoke.yaml
configs/risk/: prd_v1.yaml
docker/postgres/: init-test-database.sql
docs/: implementation_plan_agy.md  implementation_plan_codex.md
docs/design/: h1_estimated_flow_model.md  h1_flow_anticipation_retail_edge.md  h1_historical_backtest_feasibility.md  h1_prefalsification_methodology_notes.md  h1_research_status_and_decisions.md  prd_9_1_amendment_proposal.md
docs/runbooks/: h1_collection_runbook.md  local-dev-setup.md  phase0-completion-check.md  phase1-completion-check.md
migrations/: 0001_initial_schema.sql  0002_raw_record_dedupe_unique.sql  0003_raw_license_and_normalized_catalog.sql  0004_gate_decision.sql
src/skhy_research/: __init__.py  cli.py
tests/: _h1_shared_stream_support.py  conftest.py
tests/contract/: test_fixture_provider_contract.py  test_h1_continuous_ofi_proxy_contract.py  test_h1_prefalsification_contract.py  test_h1_shared_stream_contract.py
tests/e2e/: test_h1_lookahead_lineage_audit.py  test_h1_pipeline_end_to_end.py  test_phase0_completion.py  test_provider_smoke.py
tests/integration/: test_database_isolation.py  test_gate_decision_store.py  test_h1_daily_proxy_realdata_runner.py  test_h1_krx_daily_proxy_pipeline.py  test_h1_live_snapshot_pipeline.py  test_h1_original_data_availability.py  test_h1_shared_raw_collector_persistence.py  test_krx_backfill_pipeline.py  test_manifest_store.py  test_raw_recorder.py  test_real_krx_backfill_runner.py
tests/replay/: test_backtest_determinism.py
(+210 files in other folders)
